--- a/moviesnow/Info.plist
+++ b/moviesnow/Info.plist
@@ -8,6 +8,13 @@
 		<false/>
 		<key>NSExceptionDomains</key>
 		<dict>
+			<key>https://api.themoviedb.org/</key>
+			<dict>
+				<key>NSIncludesSubdomains</key>
+				<true/>
+				<key>NSExceptionAllowsInsecureHTTPLoads</key>
+				<true/>
+			</dict>
 			<key>https://api.trakt.tv</key>
 			<dict>
 				<key>NSExceptionAllowsInsecureHTTPLoads</key>
